samples/_failures_safe/1761466316_f5e9dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c05dcb30.c: In function ‘main’:
./samples/SAFE/__tmp_c05dcb30.c:163:5: error: expected declaration or statement at end of input
  163 |     graph_add_edge(&graph, 3, 5, 6);
      |     ^~~~~~~~~~~~~~
